# sistema-PG

./: Makefile  README.md  environment.yml  setup.cfg
sistema-PG/: cadastro.py
sistema-PG/tests/: test_cadastro.py
