[metadata]
name = sistema-PG
version = 0.0.X
author = Vanderlei C. Oliveira Jr.
author_email = vanderlei@on.br
description = Pacote para gestão acadêmica
long_description = arquivo: README.md
long_description_content_type = text/markdown
url = https://github.com/birocoles/sistema-PG
license = BSD 3-Clause License
project_urls =
    Bug Tracker = https://github.com/birocoles/sistema-PG/issues
classifiers =
    Programming Language :: Python :: 3 :: only
    License :: OSI Approved :: BSD 3-Clause License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
